# lixue-quiz

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
deploy/: nginx.conf  update.sh
docs/: baota-deployment.md  deployment-session-notes.md  git-update-deployment.md  lixue-mvp-user-guide.md  project-overview-for-ai.md
docs/superpowers/plans/: 2026-05-28-lixue-quiz-platform-mvp.md
docs/superpowers/specs/: 2026-05-28-lixue-quiz-platform-design.md  2026-05-28-lixue-quiz-platform-mvp-v2.md
question/: questions.csv
server/: Dockerfile  pyproject.toml
server/app/: config.py  database.py  main.py  models.py  security.py
server/app/routers/: admin.py  auth.py  banks.py  exams.py  practice.py  rankings.py  wrong_questions.py
server/app/services/: csv_importer.py  dashboard.py  exports.py  llm.py  scoring.py
server/tests/: conftest.py  test_admin_employee_summary.py  test_admin_import.py  test_config.py  test_csv_importer.py  test_deployment_config.py  test_employee_import_and_login.py  test_exams.py  test_exports.py  test_frontend_admin_banks.py  test_frontend_practice_improvements.py  test_health.py  test_llm.py  test_models.py  test_practice.py  test_rankings.py  test_security.py  test_update_script.py  test_wrong_questions.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
web/src/admin/: AdminLayout.tsx  AdminLoginPage.tsx  DashboardPage.tsx  EmployeesPage.tsx  ExportsPage.tsx  LlmConfigPage.tsx  PointRulesPage.tsx  QuestionBanksPage.tsx  QuestionsPage.tsx
web/src/api/: client.ts  types.ts
(+8 files in other folders)
